# metagenomic_agent

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CITATION.cff  Dockerfile  LICENSE  README.md  README.zh-CN.md  docker-compose.yml  pyproject.toml
config/: default.yaml  linux_server_gt256gb.yaml
database/: README.md  README.zh-CN.md
docs/: ARCHITECTURE.md  ARCHITECTURE.zh-CN.md  DEPLOY_LINUX.md  DEPLOY_LINUX.zh-CN.md  DESIGN.md  LITERATURE.md  MAG_PROTOCOL.md  METHODS.md  Metagenomic_AI_Scientist_Agent_设计文档.docx  Metagenomic_Research_Agent_Developer_Documentation.md  Metagenomics_Agent_Architecture_and_Optimization.md  OPTIMIZATION.md  OPTIMIZATION_PROPOSAL_IMPL.md  Optimization_Proposal_IF10.md  PROPOSAL_2026_IMPL.md  README.md  ROADMAP.md  SELF_HEAL.md  SELF_HEAL.zh-CN.md  USAGE.md  USAGE.zh-CN.md
examples/: gut_metagenome.yaml  sample_metadata.tsv
paper/: README.md
results_mags/: final_report.html  functional_profile.tsv  paths.json  quality_report.html  quality_report.tsv  quality_status.json  supervisor_plan.json  taxonomy_profile.tsv
scripts/: build_databases.sh  reproduce_demo.sh
tests/: conftest.py  test_agents_doc.py  test_bio_reasoning.py  test_copilot_gaps_v021.py  test_design_doc_v023.py  test_development_v024.py  test_development_v025.py  test_domain_rag_v016.py  test_graph_dryrun.py  test_grounding_evidence.py  test_hitl_async_v020.py  test_hitl_gates_v019.py  test_hpc_v017.py  test_interactive_viz.py  test_literature_v026.py  test_multiagent_v08.py  test_optimization.py  test_parser.py  test_production_hardening.py  (+10 more)
(+193 files in other folders)
